# cupcake

./: CMakeLists.txt  README.md
inc/: CMakeLists.txt
inc/cupcake/: CMakeLists.txt  Cupcake.h
inc/cupcake/async/: Async.h
inc/cupcake/http/: Http.h  HttpError.h  HttpServer.h
inc/cupcake/internal/: CString.h  Global_win.h  Model.h
inc/cupcake/internal/http/: BufferedReader.h  BufferedWriter.h  ChunkedReader.h  ChunkedWriter.h  ContentLengthReader.h  ContentLengthWriter.h  HandlerMap.h  HttpConnection.h  HttpRequestImpl.h  HttpResponseImpl.h  RequestData.h  StreamSource.h  StreamSourceSocket.h
inc/cupcake/internal/http2/: HpackDecoder.h  HpackEncoder.h  HpackTable.h  Http2Connection.h  HuffmanData.h  HuffmanEncoding.h
inc/cupcake/internal/net/: SocketImpl_darwin.h  SocketImpl_win.h
inc/cupcake/internal/text/: Strconv.h  String.h
inc/cupcake/internal/util/: PathTrie.h
inc/cupcake/net/: Addrinfo.h  CMakeLists.txt  INet.h  Sockaddr.h  Socket.h  SocketError.h
inc/cupcake/text/: CMakeLists.txt  String.h  StringRef.h
inc/cupcake/util/: CMakeLists.txt  Cleaner.h  Error.h  Result.h
priv_inc/: CMakeLists.txt
priv_inc/cupcake_priv/: CMakeLists.txt  CString.h  Cupcake_priv_win.h  SocketImpl_win.h
priv_inc/cupcake_priv/http/: BufferedContentLengthWriter.h  BufferedReader.h  BufferedWriter.h  ChunkedReader.h  ChunkedWriter.h  CommaListIterator.h  ContentLengthReader.h  ContentLengthWriter.h  HandlerMap.h  HttpConnection.h  HttpRequestImpl.h  HttpResponseImpl.h  NullReader.h  StreamSource.h  StreamSourceSocket.h
priv_inc/cupcake_priv/http2/: Http2Connection.h  HuffmanEncoding.h
priv_inc/cupcake_priv/net/: CMakeLists.txt  SocketImpl_win.h
priv_inc/cupcake_priv/text/: CMakeLists.txt  Strconv.h
priv_inc/cupcake_priv/util/: Cleaner.h  PathTrie.h
src/: CMakeLists.txt  CString.cpp  Cupcake_unix.cpp  Cupcake_win.cpp  Global_win.cpp
src/async/: Async_win.cpp  CMakeLists.txt
src/http/: BufferedContentLengthWriter.cpp  BufferedReader.cpp  BufferedWriter.cpp  ChunkedReader.cpp  ChunkedWriter.cpp  CommaListIterator.cpp  ContentLengthReader.cpp  ContentLengthWriter.cpp  HandlerMap.cpp  HttpConnection.cpp  HttpRequestImpl.cpp  HttpResponseImpl.cpp  HttpServer.cpp  NullReader.cpp  RequestData.cpp  StreamSourceSocket.cpp
src/http2/: HpackDecoder.cpp  HpackEncoder.cpp  HpackTable.cpp  Http2Connection.cpp  HuffmanData.cpp  HuffmanEncoding.cpp
src/net/: AddrInfo_unix.cpp  AddrInfo_win.cpp  CMakeLists.txt  INet_unix.cpp  INet_win.cpp  SockAddr_unix.cpp  SockAddr_win.cpp  Socket.cpp  SocketImpl_darwin.cpp  SocketImpl_win.cpp  Socket_win.cpp
src/text/: CMakeLists.txt  Strconv.cpp  String.cpp  StringRef.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  unittest.cpp
test/unit/http/: BufferedReader_test.cpp  BufferedWriter_test.cpp  ChunkedReader_test.cpp  ChunkedWriter_test.cpp  CommaListIterator_test.cpp  Http1_1_test.cpp  Http1_test.cpp
test/unit/http2/: CMakeLists.txt  Hpack_test.cpp  Huffman_test.cpp
test/unit/net/: AddrInfo_test.cpp  CMakeLists.txt  INet_test.cpp  SockAddr_test.cpp  Socket_test.cpp
test/unit/text/: CMakeLists.txt  Strconv_test.cpp  string_test.cpp
test/unit/util/: PathTrie_test.cpp
test/unitinc/: CMakeLists.txt
test/unitinc/unit/: CMakeLists.txt  UnitTest.h
test/unitinc/unit/http/: BufferedReader_test.h  BufferedWriter_test.h  ChunkedReader_test.h  ChunkedWriter_test.h  CommaListIterator_test.h  Http1_1_test.h  Http1_test.h
test/unitinc/unit/http2/: CMakeLists.txt  Hpack_test.h  Huffman_test.h
test/unitinc/unit/net/: Addrinfo_test.h  CMakeLists.txt  INet_test.h  Socket_test.h
test/unitinc/unit/text/: CMakeLists.txt  Strconv_test.h  String_test.h
test/unitinc/unit/util/: CMakeLists.txt  PathTrie_test.h
